--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "sick-fits-backend",
+  "name": "atacha-backend",
   "version": "2.0.0",
   "private": true,
-  "author": "Wes Bos",
+  "author": "Cesar Ortiz, Camilo Santana",
   "license": "MIT",
   "scripts": {
-    "dev": "keystone-next",
+    "dev": "keystone-next -p 3001",
     "seed-data": "keystone-next --seed-data"
   },
   "eslintConfig": {
@@ -69,7 +69,7 @@
     "typescript": "^4.1.2"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.x"
   },
-  "repository": "https://github.com/wesbos/advanced-react"
+  "repository": "https://github.com/CesarJOritzM/Backend-atacha"
 }
